# browser-optimizer-mcp-V2

./: .gitignore  Design.md  MCP_TOOLS_UNDER_THE_HOOD.md  PROJECT_PROPOSAL.md  README.md  cache.db  pyproject.toml  pyrefly.toml  requirements.txt
browser_optimizer/: __init__.py  cli.py  installer.py
browser_optimizer/browser/: manager.py
browser_optimizer/cache/: cache.py  db.py  embedding.py
browser_optimizer/classifier/: classifier.py  feature_extractor.py  predict.py
browser_optimizer/compressor/: compressor.py
browser_optimizer/config/: settings.py
browser_optimizer/dashboard/: __init__.py  index.html  server.py
browser_optimizer/diff/: diff.py
browser_optimizer/executor/: executor.py
browser_optimizer/extractor/: extractor.py
browser_optimizer/metrics/: metrics.py
browser_optimizer/page-classifier/data/: page_dataset.csv
browser_optimizer/schemas/: schemas.py
browser_optimizer/server/: main.py
browser_optimizer/utils/: logger.py
docker/: Dockerfile  docker-compose.yml
models/: feature_names.pkl  label_encoder.pkl  page_classifier.pkl
notebooks/: .gitkeep
scripts/: benchmark.py  extract_docx.py
src/: evaluate.py
tests/: conftest.py  test_cache.py  test_classifier.py  test_compressor.py  test_confidence.py  test_diff.py  test_disclosure.py  test_embedding.py  test_observability.py  test_sessions.py
training/: feature_extractor.py  predict.py  train.py
